  12. New Abjurer spell: Anti-Plant Shell
  13. New Evoker spells: Purge Invisibility, Helping Hand, Produce Flame, Forceful Hand, Pocket
  14. New Conjurer spells: Watchful Hound, Insect Plague
  15. New Cleric spells: Death Guard, Death Knell, Sense Injury, Anti Undead Field, Hold Undead, Incite the Dead
   *. Beyond new spells for some, all mage specialists have had their spell lists tinkered with to make them a bit better
# Build 5.8.3 Release 10/27/2014
   *. Database Schema Updated for CMCHAR.CMDESC and CMCHAR.CMCHID.  See the Installation Guide about running DBUpgrade.
   1. (FakeDB): DBUpgrade is now application independent, and can handle big tables better.  See installation guide for new recommended usage.
   2. Generic Character Classes now support starting money values. (Standard support requires code).
   3. Socials action cost can now be controlled and tweeked from ini file/control panel.
   4. MiniWebServer renamed to CoffeeWebServer -- so many path/name changes! Also upgraded to 2.2.
   5. Clan Position-based effects/abilities implemented. Standard Powers also still apply.
   6. Random Generator now supports post-processing tags in XML, MERGE parameters and NODETYPE_[dir] tags. See example.xml re-organization.
   7. Portals can now be entered using the CLIMB skill, and their put, mount, and dismount strings are modifiable.
   8. New Property: Prop_Climbable - use for making rooms, exits, or portals require climbing (and benefit from ropes and ladders).
   9. New Guide in guides/randomareas.html.  Also, random races are easier to build now.
  10. New Assassin skill: Scratch, for doing very very little damage without entering combat.
  11. Emoter behavior's "inroom" parameter changed to comma delimited -- it just wasn't working the other way.
  12. Scriptable GET_PROG is now functional on container items, as it will match the item being retreived, not the container.