@@ -39,6 +39,12 @@ The caster becomes protected by an anti-undead field into which an aggressive \
 undead creature may not advance.  The field will repel the undead and keep them at \
 bay, but will collapse under continuous assault.
 
+PRAYER_AWAKEN=<ABILITY>\
+Usage    : PRAY AWAKEN\n\r\
+Example  : pray awaken\n\r\
+The cleric is able to awaken everyone in the room, dispelling any sleep-causing \
+effects at the same time.
+
 PRAYER_BEHEMOTH=<ABILITY>\
 Usage    : PRAY BEHEMOTH\n\r\
 Example  : pray behemoth\n\r\
@@ -384,6 +390,13 @@ Example  : pray "consecrate land"\n\r\
 This prayer consecrates the land on which it is cast, making evil prayers unable \
 to function here.  The prayer is permanent when cast on the cleric property, or \
 the property of one his/she follows.
+
+PRAYER_CORPSE_WALK=<ABILITY>\
+Usage    : PRAY [CORPSE WALK] [corpse name]\n\r\
+Example  : pray "corpse walk" body of joe\n\r\
+This spell teleports the cleric and his or her followers to the corpse given by the \
+name of this spell.  The magic will tend to prefer local corpses to those far away, \
+and the corpses of players to those of mobs.
 
 PRAYER_CURSELUCK=PRAYER_CURSE_LUCK
 PRAYER_CURSE_LUCK=<ABILITY>\
@@ -1118,6 +1131,14 @@ Usage    : PRAY "MASS PARALYZE"\n\r\
 Example  : pray "mass paralyze"\n\r\
 Causes a paralyzing grip to descend on everyone in the same \
 room as the caster, except the caster and his or her group.
+
+PRAYER_MERCY=<ABILITY>\
+Usage    : PRAY MERCY\n\r\
+Example  : pray mercy\n\r\
+The cleric instills a blessing of mercy upon the room, preventing \
+spells or swords from doing damage.  This prayer is permanent when \
+cast on property the cleric owns. It is not permanent on clan property, \
+however.
 
 MINOR_INFUSION=PRAYER_MINOR_INFUSION
 PRAYER_MINOR_INFUSION=<ABILITY>\
