@@ -15,6 +15,7 @@
   13. New Evoker spells: Purge Invisibility, Helping Hand, Produce Flame, Forceful Hand, Pocket
   14. New Conjurer spells: Watchful Hound, Insect Plague
   15. New Cleric spells: Death Guard, Death Knell, Sense Injury, Anti Undead Field, Hold Undead, Incite the Dead
+      Mercy, Awaken, Corpse Walk
    *. Beyond new spells for some, all mage specialists have had their spell lists tinkered with to make them a bit better
 # Build 5.8.3 Release 10/27/2014
    *. Database Schema Updated for CMCHAR.CMDESC and CMCHAR.CMCHID.  See the Installation Guide about running DBUpgrade.
